# httpyexpect

./: .coveragerc  .mandatory_files  .mandatory_files_ignore  .mypy.ini  .static_files  .static_files_ignore  README.md  models.py  setup.cfg
.devcontainer/: dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: check_http_exception_schema.yaml  check_pydantic_models.yaml  pypi_publish.yaml
httpyexpect/: __init__.py  models.py  validation.py
httpyexpect/client/: __init__.py  custom_types.py  exceptions.py  mapping.py  response_mapping.py  translator.py
httpyexpect/models/: __init__.py  http_exception.py
httpyexpect/server/: __init__.py  exceptions.py  fastapi_.py
httpyexpect/server/handlers/: fastapi_.py
json_schemas/: http_exception.json
scripts/: update_http_exception_schema.py  update_models_from_schemas.py
tests/integration/: test_client.py
tests/unit/: test_exception_mapping.py  test_models.py  test_server_exceptions.py  test_validation.py
