# Copyright 2021 - 2022 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = httpyexpect
version = attr: httpyexpect.__version__
description = An opinionated way to translate server side HTTP errors to the client side.
url = https://github.com/ghga-de/httpyexpect
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
python_requires = >= 3.9

[options.package_data]
* = *.yaml, *.json, *.html

[options.entry_points]
console_scripts =
    my-microservice = httpyexpect.__main__:run_cli

[options.extras_require]
fastapi =
    fastapi>=0.73.0,<0.79.0
dev =
    ghga-service-chassis-lib[dev]==0.13.6
    datamodel-code-generator==0.13.0

all =
    %(fastapi)s
    %(dev)s

[options.packages.find]
exclude = tests
